--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,10 @@ dagshub
 fastapi 
 uvicorn 
 python-multipart
+# Orchestration
+prefect>=2.14.0
+# Monitoring
+evidently>=0.4.0
+prometheus-client>=0.19.0
+prometheus-fastapi-instrumentator>=6.1.0
 # -e .
